tests/parser/invalidinput/non-int-agg-position.idp
vocabulary V {
  type Id
  Q(Id)
}

theory T : V {
  Q(sum{ id : true : 1 }).
}

structure S : V {
  Id = { a; b; c }
}

procedure getExpectedNbOfModels() {
	return 4
}

procedure main(){
	return 1
}
